add api /teamByArrayId
